# scribeflow

./: .env  .gitignore  pyproject.toml
assets/test docs/: The American Angler.docx  fishing_course.json
docs/: arch.md  mvp.md
docs/implementation/: prompt-1.md  prompt-2.md
docs/prompts/: 1.md  2.md
generated_artifacts/: american_angler_cli_output.txt  compiled_payloads.json  review.html  the_american_angler.expanded.md  the_american_angler.extracted.md  the_american_angler.meta.json  the_american_angler.style_guide.json  the_american_angler.visual_manifest.json
src/scribeflow/: __init__.py  broker.py  broker_cli.py  cli.py  discovery.py  draft.py  draft_cli.py  llm.py  openrouter.py  openrouter_check_cli.py  service.py
